fix for issue with spacing and alignment on portfolio page after clean up

--- a/css/projects.css
+++ b/css/projects.css
@@ -2,7 +2,7 @@
         .btn-secondary:hover,
         .btn-secondary:focus {
         color: #333;
-        text-shadow: none;
+        text-shadow: none; /* Prevent inheritance from `body` */
         background-color: black;
         border: 1px solid #fff;
         }
@@ -149,7 +149,7 @@
         color: black;
 
         }
-
+        
         #filter-buttons {
           margin-left: 50px;
           padding-top: 40px;
@@ -160,7 +160,9 @@
         }
 
       .cover-container {
-        max-width: 95%;
+        max-width: 100%;
+        margin-left: 15px;
+        margin-right: 15px;
         }
 
         .masthead {
@@ -206,21 +208,25 @@
         color: rgba(255, 255, 255, .5);
         }
 
+        /* Add padding BETWEEN each column */
         .row,
         .row > .column {
           padding: 8px;
         }
   
+        /* Create three equal columns that floats next to each other */
         .column {
           float: left;
           width: 33.33%;
-          display: none;
+          display: none; /* Hide all elements by default */
         }
   
+        /* Content */
         .content {
           padding: 5px;
         }
   
+        /* The "show" class is added to the filtered elements */
         .show {
           display: block;
         }
